# OpenCLTracer

./: CMakeLists.txt  LICENSE  README.md  RungeKutta4.conf  SomeNotes.txt  lcs.cpp  lcs.h  lcsBigBlockInitializationForPositionsKernel.cl  lcsBigBlockInitializationForVelocitiesKernel.cl  lcsBlockedTracingKernelOfRK4.cl  lcsBlockedTracingKernelOfRK4ForTest.cl  lcsCollectActiveParticlesForNewIntervalKernels.cl  lcsCollectActiveParticlesForNewRunKernels.cl  lcsExclusiveScanForIntKernels.cl  lcsGeometry.cpp  lcsGeometry.h  lcsGetGroupsForBlocksKernels.cl  lcsGetStartOffsetInParticlesKernel.cl  lcsInitialCellLocationKernel.cl  lcsRedistributeParticlesKernels.cl  lcsTetrahedronBlockIntersectionKernel.cl  lcsUnitTest.cpp  lcsUtility.cpp  lcsUtility.h  main.cpp  oldFile.lcsBigBlockInitializationKernel.cl  oldFile.lcsBlockedTracingKernelOfRK4.cl
