cmake_minimum_required(VERSION 2.8)

PROJECT (LCSProject)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})

INCLUDE(FindOpenCL)

FIND_PACKAGE(OpenCL REQUIRED)

INCLUDE_DIRECTORIES("/usr/local/cuda-5.0/include/")

 INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIR})

 IF(NOT VTK_BINARY_DIR)
   FIND_PACKAGE(VTK REQUIRED)
  IF(NOT VTK_USE_RENDERING)
    MESSAGE(FATAL_ERROR "Example ${PROJECT_NAME} requires VTK_USE_RENDERING.")
  ENDIF(NOT VTK_USE_RENDERING)
  INCLUDE(${VTK_USE_FILE})
 ENDIF(NOT VTK_BINARY_DIR)

ADD_EXECUTABLE(LCSProject main.cpp lcsUtility.cpp lcsGeometry.cpp lcsUnitTest.cpp lcs.cpp)
#TARGET_LINK_LIBRARIES(LCSProject ${OPENCL_LIBRARIES})
TARGET_LINK_LIBRARIES(LCSProject vtkRendering ${OPENCL_LIBRARIES})
